# C-BigInt

./: .gitignore  BigInt.cc  BigInt.h  CMakeLists.txt  LICENSE  README.md  Test.cc  Test.h  main.cpp  vector.h
lib/: BigInt.cc  BigInt.h  Exception.cc  Exception.h  main.cpp  trying.cc
safeCPP/: scpp_assert.hpp  scpp_vector.hpp
tests/: mainTest.cc  scriptHelpers.py  testOperations.cc
